gl33-master/src/test/deca/syntax/invalid/others/doubleQuotesNonFermesMethde.deca
/*
Test sur les doubles quotes non fermés dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
    int myFunc()
    {
      print("hello);
      return 1;
    }
}

{

}
